# Server

./: .gitignore  Cargo.toml  Readme  Readme.md  Todo.md  note.txt
src/: lib.rs  main.rs  protocols.rs  serverstruct.rs
