[package]
name = "music"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
rand = "0.10.2"



dotenv = "0.15" 
gemini-rs = "2.0.0"
ratatui = "0.30.2"
crossterm = { version = "0.29.0", features = ["event-stream"] }
unicode-width = "0.2.2"
